Fix height of slides on mobile

--- a/inclusive-palettes-for-a11y/css/main.css
+++ b/inclusive-palettes-for-a11y/css/main.css
@@ -73,6 +73,12 @@
   justify-content: center;
 }
 
+@media screen and (max-width: 700px) {
+  .fullscreen {
+    --slide-height: 500px;
+  }
+}
+
 .fullscreen > div {
   width: 100%;
 }
